# qr2text

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
